--- a/fondazione/ui.frontend/src/main/webpack/components/forms/options.scss
+++ b/fondazione/ui.frontend/src/main/webpack/components/forms/options.scss
@@ -58,6 +58,7 @@
     gap: 1rem;
 
     label {
+      font-size: $small-text-size;
       cursor: pointer;
     }
   }
